--- a/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
@@ -55,7 +55,7 @@
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="navbar-collapse">
-                            <div class="divider-vertical"></div>
+                            {#<div class="divider-vertical"></div>#}
                             <ul class="nav navbar-nav navbar-left">
                                 <li class="">
                                     <a href="{{ path("acted_legal_docs_howitworks") }}">
